--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1550,6 +1550,103 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "50ef0fa9": {
+          "id": "50ef0fa9",
+          "path": "js/main.js",
+          "output": "js/main-compl.js",
+          "name": "main.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d2945328": {
+          "id": "d2945328",
+          "path": "js/datepicker.min.js",
+          "output": "js/datepicker.min-compl.js",
+          "name": "datepicker.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "b866c46c": {
+          "id": "b866c46c",
+          "path": "scss/datepicker/datepicker.scss",
+          "output": "css/datepicker/datepicker.css",
+          "name": "datepicker.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "f4f3e7b6": {
+          "id": "f4f3e7b6",
+          "path": "js/datepicker.en.js",
+          "output": "js/datepicker.en-compl.js",
+          "name": "datepicker.en.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "ab2c4707": {
+          "id": "ab2c4707",
+          "path": "js/moment.js",
+          "output": "js/moment-compl.js",
+          "name": "moment.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "41c83da1": {
+          "id": "41c83da1",
+          "path": "images/bg.png",
+          "output": "images/bg.png",
+          "name": "bg.png",
+          "category": "IMAGE",
+          "size": 1031077,
+          "type": "png",
+          "initialSize": 1031077,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
