--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1647,6 +1647,55 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "03344d66": {
+          "id": "03344d66",
+          "path": "images/sprite.png",
+          "output": "images/sprite.png",
+          "name": "sprite.png",
+          "category": "IMAGE",
+          "size": 8311,
+          "type": "png",
+          "initialSize": 8311,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "109a97dd": {
+          "id": "109a97dd",
+          "path": "scss/fontello.scss",
+          "output": "css/fontello.css",
+          "name": "fontello.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "c821e7a3": {
+          "id": "c821e7a3",
+          "path": "css/fontello.css",
+          "output": "css/fontello-dist.css",
+          "name": "fontello.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
