--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1648,19 +1648,6 @@
           "height": 0,
           "width": 0
         },
-        "03344d66": {
-          "id": "03344d66",
-          "path": "images/sprite.png",
-          "output": "images/sprite.png",
-          "name": "sprite.png",
-          "category": "IMAGE",
-          "size": 8311,
-          "type": "png",
-          "initialSize": 8311,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "109a97dd": {
           "id": "109a97dd",
           "path": "scss/fontello.scss",
@@ -1696,6 +1683,32 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "0f0cdb71": {
+          "id": "0f0cdb71",
+          "path": "images/textarea-bg.png",
+          "output": "images/textarea-bg.png",
+          "name": "textarea-bg.png",
+          "category": "IMAGE",
+          "size": 953,
+          "type": "png",
+          "initialSize": 953,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "03344d66": {
+          "id": "03344d66",
+          "path": "images/sprite.png",
+          "output": "images/sprite.png",
+          "name": "sprite.png",
+          "category": "IMAGE",
+          "size": 8309,
+          "type": "png",
+          "initialSize": 8309,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
