--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1480,7 +1480,7 @@
         "7e70da7e": {
           "id": "7e70da7e",
           "path": "scss/style.scss",
-          "output": "css/style.css",
+          "output": "css/style.min.css",
           "name": "style.scss",
           "category": "CSS",
           "autoCompile": true,
@@ -1489,27 +1489,11 @@
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
+          "outputStyle": "compressed",
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "d07d20d2": {
           "id": "d07d20d2",
@@ -1635,19 +1619,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "41c83da1": {
-          "id": "41c83da1",
-          "path": "images/bg.png",
-          "output": "images/bg.png",
-          "name": "bg.png",
-          "category": "IMAGE",
-          "size": 1031077,
-          "type": "png",
-          "initialSize": 1031077,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "109a97dd": {
           "id": "109a97dd",
           "path": "scss/fontello.scss",
@@ -1668,11 +1639,50 @@
           ],
           "type": "sass"
         },
-        "c821e7a3": {
-          "id": "c821e7a3",
-          "path": "css/fontello.css",
-          "output": "css/fontello-dist.css",
-          "name": "fontello.css",
+        "41c83da1": {
+          "id": "41c83da1",
+          "path": "images/bg.png",
+          "output": "images/bg.png",
+          "name": "bg.png",
+          "category": "IMAGE",
+          "size": 901522,
+          "type": "png",
+          "initialSize": 901522,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0f0cdb71": {
+          "id": "0f0cdb71",
+          "path": "images/textarea-bg.png",
+          "output": "images/textarea-bg.png",
+          "name": "textarea-bg.png",
+          "category": "IMAGE",
+          "size": 107,
+          "type": "png",
+          "initialSize": 107,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "03344d66": {
+          "id": "03344d66",
+          "path": "images/sprite.png",
+          "output": "images/sprite.png",
+          "name": "sprite.png",
+          "category": "IMAGE",
+          "size": 3438,
+          "type": "png",
+          "initialSize": 3438,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "56fbd435": {
+          "id": "56fbd435",
+          "path": "css/style.min.css",
+          "output": "css/style.min-dist.css",
+          "name": "style.min.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -1684,31 +1694,21 @@
           "parents": [],
           "type": "css"
         },
-        "0f0cdb71": {
-          "id": "0f0cdb71",
-          "path": "images/textarea-bg.png",
-          "output": "images/textarea-bg.png",
-          "name": "textarea-bg.png",
-          "category": "IMAGE",
-          "size": 953,
-          "type": "png",
-          "initialSize": 953,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "03344d66": {
-          "id": "03344d66",
-          "path": "images/sprite.png",
-          "output": "images/sprite.png",
-          "name": "sprite.png",
-          "category": "IMAGE",
-          "size": 8309,
-          "type": "png",
-          "initialSize": 8309,
-          "optimized": false,
-          "height": 0,
-          "width": 0
+        "0c7b55b5": {
+          "id": "0c7b55b5",
+          "path": "css/style.css",
+          "output": "css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
